Fixes image sizing, improves link rendering.
Fixes issue we were having with the portfolio image rendering too small. Also reduces the size & lightens up the colour of the portfolio links so that they are less prominent than the content of the entry itself.

--- a/css/portfolios.css
+++ b/css/portfolios.css
@@ -39,6 +39,7 @@
 
 .portfolioEntry > a,
 .portfolioEntry > a:hover {
+  display: flex;
   border-bottom: 0;
 }
 
@@ -65,10 +66,10 @@
 
 .portfolioTitle a {
   float: right;
-  font-size: 1em;
+  font-size: 0.9em;
   font-weight: 300;
-  margin-left: 0.5em;
-  color: #555 !important;
+  margin-left: 0.75em;
+  color: #888 !important;
   font-family: 'Roboto', sans-serif;
 }
 
